--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@modyo-dynamic/modyo-design-system": "^1.1.0",
-    "@modyo-dynamic/modyo-design-system-react": "^1.1.0",
+    "@dynamic-framework/ui": "^1.1.0",
+    "@dynamic-framework/ui-react": "^1.1.0",
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
