--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node.js 16.x
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'+
+          node-version-file: '.nvmrc'
       - name: Install dependencies
         run: npm install
         env:
