--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests",
     "eject": "craco eject",
     "eslint": "eslint src/**/*{.ts,.tsx}",
-    "push": "DEBUG=* npx @modyo/cli push --publish"
+    "push": "npm run build && npx @modyo/cli@latest push --publish",
+    "push:debug": "npm run build && DEBUG=* npx @modyo/cli@latest push --publish"
   },
   "browserslist": {
     "production": [
