--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "clear": "node .config/clear.mjs",
     "start": "webpack serve --mode development --config .config/webpack.js",
     "build": "npm run clear && NODE_ENV=production webpack build --mode production --config .config/webpack.js",
-    "test:unit": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests",
-    "test:unit:watch": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests --watch",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests --watch",
     "eslint": "eslint src/**/*{.ts,.tsx}",
     "push": "npm run build && npx @modyo/cli@latest push --publish",
     "push:debug": "npm run build && DEBUG=* npx @modyo/cli@latest push --publish"
