--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "stylelint": "stylelint \"src/**/*.{css,scss}\" --rd",
     "push": "npm run build && npx @modyo/cli@latest push --publish",
     "push:debug": "npm run build && DEBUG=* npx @modyo/cli@latest push --publish",
+    "preview": "npm run start && npx @modyo/cli@latest preview",
     "lint-staged": "lint-staged",
     "prepare": "husky install"
   },
