--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "0.4.0",
   "private": true,
   "dependencies": {
-    "@dynamic-framework/ui-react": "^1.27.0",
+    "@dynamic-framework/ui-react": "^1.28.1",
     "@reduxjs/toolkit": "^1.8.4",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "axios": "^1.5.1",
+    "axios": "~1.6.1",
     "classnames": "^2.3.2",
     "i18next": "^23.6.0",
     "liquidjs": "^10.9.3",
@@ -23,7 +20,12 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.2",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.6",
     "@types/luxon": "^3.0.3",
     "@types/node": "^18.15.3",
@@ -44,7 +46,7 @@
     "file-loader": "^6.2.0",
     "glob": "^10.3.10",
     "html-webpack-plugin": "^5.5.3",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -67,18 +69,19 @@
     "webpack-manifest-plugin": "^5.0.0"
   },
   "scripts": {
-    "clear": "node .config/clear.mjs",
-    "start": "webpack serve --mode development --config .config/webpack.js",
     "build": "npm run clear && NODE_ENV=production webpack build --mode production --config .config/webpack.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests --watch",
-    "eslint": "eslint src/**/*{.ts,.tsx}",
-    "stylelint": "stylelint \"src/**/*.{css,scss}\" --rd",
-    "push": "npm run build && npx @modyo/cli@latest push --publish",
-    "push:debug": "npm run build && DEBUG=* npx @modyo/cli@latest push --publish",
-    "preview": "npm run start && npx @modyo/cli@latest preview",
+    "clear": "node .config/clear.mjs",
+    "commitlint": "commitlint --edit",
+    "eslint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
     "lint-staged": "lint-staged",
-    "prepare": "husky install"
+    "prepare": "husky",
+    "preview": "npm run start && npx @modyo/cli@latest preview",
+    "push:debug": "npm run build && DEBUG=* npx @modyo/cli@latest push",
+    "push": "npm run build && npx @modyo/cli@latest push --publish",
+    "start": "webpack serve --mode development --config .config/webpack.js",
+    "stylelint": "stylelint 'src/**/*.css' 'src/**/*.scss' --rd",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests --watch",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests"
   },
   "browserslist": {
     "production": [
