--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@dynamic-framework/ui-react": "^1.28.1",
     "@reduxjs/toolkit": "^1.8.4",
-    "axios": "~1.6.1",
+    "axios": "^1.7.3",
     "classnames": "^2.3.2",
     "i18next": "^23.6.0",
     "liquidjs": "^10.9.3",
