--- a/.github/workflows/use-labeler.yml
+++ b/.github/workflows/use-labeler.yml
@@ -12,4 +12,5 @@ on:
 
 jobs:
   use-pr-labeler:
-    uses: dynamic-framework/.github/.github/workflows/labeler.yml@main
+    uses: dynamic-framework/.github/.github/workflows/pr-labeler.yml@main
+    secrets: inherit
