--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.3.1",
     "react-redux": "^8.0.2",
+    "react-select": "^5.8.1",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
