--- a/.eslintrc
+++ b/.eslintrc
@@ -89,13 +89,32 @@
               "caseInsensitive": true
             }
           }
+        ],
+        "object-curly-newline": [
+          "error",
+          {
+            "ImportDeclaration": {
+              "multiline": true,
+              "minProperties": 3,
+              "consistent": true
+            }
+          }
+        ],
+        "react/jsx-max-props-per-line": [
+          "error",
+          {
+            "maximum": {
+              "single": 1,
+              "multi": 1
+            }
+          }
         ]
       }
     },
     {
       "files": [
-        "*.spec.ts",
-        "*.spec.tsx",
+        "src/**/*.spec.ts",
+        "src/**/*.spec.tsx",
         "jest.config.js"
       ],
       "env": {
@@ -107,7 +126,8 @@
           {
             "devDependencies": true
           }
-        ]
+        ],
+        "@typescript-eslint/require-await": "off"
       }
     }
   ],
